# twitter-scan

./: .gitignore  LICENSE  README.md  build.sh  manage.py  pyproject.toml  pytests.ini  render.yaml
authorization/: admin.py  authorization.py  decorators.py  forms.py  load_model.py  ml.py  models.py  serializers.py  urls.py  utils.py  views.py
authorization/migrations/: 0001_initial.py  0002_twitterusersearched.py  0003_auto_20220702_0240.py
authorization/templates/: index.html
authorization/templates/authorization/: _header.html  base.html  error_page.html  index.html  list_results.html  realtime.html  results.html  thankyou.html  user_search_history.html
render/: apps.py  urls.py  views.py
render/templates/render/: _footer.html  _header.html  base.html  index.html
tests/authorization/: test_forms.py  test_scoring.py  test_utils.py
toxic-env/: pyvenv.cfg
tweetscanner/: README.md  __init__.py  asgi.py  celery.py  manage.py  pyproject.toml  settings.py  urls.py  wsgi.py
tweetscanner/render/: views.py
tweetscanner/tweetscanner/: asgi.py  settings.py  urls.py
twitter-scan/: .gitlab-ci.yml  README-OLD.md  README.md  cookiecutter-config-file.yml
twitter-scan/backend/app/: Twitter-Mining.ipynb  pyproject.toml
twitter-scan/backend/app/alembic/versions/: 04f0a83a95be_add_column_last_name_to_user_model.py  48170e59972a_add_column_last_name_to_user_model.py  7ebf736114be_add_column_last_name_to_user_model.py  88f064fd64ac_created_twitter_username_model.py  c242645ce722_add_column_last_name_to_user_model.py  d4867f3a4c0a_first_revision.py
twitter_api/: twitter_api.py
(+8 files in other folders)
