[tool.poetry]
name = "tweetscanner"
version = "0.1.0"
description = ""
authors = ["franciscojavierarceo <arceofrancisco@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.2.13"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.3"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = "^20.1.0"
tweepy = "^4.10.0"
detoxify = "^0.5.0"
crispy-bootstrap5 = "^0.6"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
